examples/test/testpolicy19652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19652
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key38: value30
      key14: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value32
          key45: value20
          key0: value36
      podSelector:
        matchLabels:
          key20: value1
          key25: value8
          key5: value16
